--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "cordova-android": "8.1.0",
     "core-js": "^2.5.4",
     "firebase": "^6.6.2",
+    "ngx-mask": "^8.1.0",
     "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
