--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/qr-scanner": "^5.15.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.1.0",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.5.4",
     "firebase": "^6.6.2",
     "ngx-mask": "^8.1.0",
@@ -77,7 +79,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-qrscanner": {}
     },
     "platforms": [
       "android"
