created qr-code scan to generate score

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.customer.fidelity.app",
-  "appName": "fidelity-app",
+  "appId": "io.ionic.starter",
+  "appName": "Ionic4BarcodeScanner",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www"
