--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,7 +1,10 @@
 {
-  "appId": "com.customer.fidelity.app",
-  "appName": "fidelity-app",
+  "appId": "io.ionic.starter",
+  "appName": "Ionic4BarcodeScanner",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "www"
+  "webDir": "www",
+  "server": {
+    "url": "http://localhost:8100"
+  }
 }
