--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,10 +1,7 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "Ionic4BarcodeScanner",
+  "appId": "io.ionic.starter.app.consumidor",
+  "appName": "app-consumidor",
   "bundledWebRuntime": false,
   "npmClient": "npm",
-  "webDir": "www",
-  "server": {
-    "url": "http://localhost:8100"
-  }
+  "webDir": "www"
 }
