--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "io.ionic.starter",
-  "appName": "Ionic4BarcodeScanner",
+  "appId": "io.ionic.starter.app.consumidor",
+  "appName": "app-consumidor",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www"
